sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value GetNombreValeur
var lg=GetNombreValeur()
       ^AlgBubbleSort1:8: error: not found: value PlusPetitQue
	if ( PlusPetitQue( i, i+1)){
             ^